# BundesFAQ-Chatbot

./: .env.example  .gitignore  BACKEND_INTEGRATION.md  FRONTEND_FIXED.md  LICENSE  PROJECT_READY.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/: app.py  chat_terminal.py  pyproject.toml  requirements.txt
backend/data/: FAQtxt.txt
backend/scripts/: build_vectorstore.py
frontend/src/: authConfig.ts
frontend/src/api/: api.ts
n8n workflows/: AI chat workflow.json  Document Processing Workflow.json
src/: dataparsingpdf.ipynb
src/backend/: faq_rag_semantic_chunking.ipynb
src/frontend/: FIXES.md  README.md  vite.config.ts
src/frontend/src/components/UploadFile/: UploadFile.tsx
src/frontend/src/locales/en/: translation.json
src/frontend/src/pages/chat/: Chat.tsx
